add link to github

--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a
+        href="https://github.com/majovertiz/weather-app-project"
+        target="_blank"
+      >
+        Open-source code
+      </a>
+      by Majo Vertiz
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
